Bugfix: new tag input is visible when tag editor opens

--- a/media/boom/css/boom.tags.less
+++ b/media/boom/css/boom.tags.less
@@ -100,6 +100,12 @@
 	}
 }
 
+#b-tags {
+	&-add-name {
+		display: none;
+	}
+}
+
 .boom-tagmanager {
 	.b-tags-tree-container {
 		float: left;
